syntax = "proto3";

package harmonify.movie_reservation_system.shared;

message Test {
    string traceId = 1;
    string message = 2;
}
